# ushidashi

./: Cargo.toml  Cross.toml  README.md  justfile
src/: api.rs  audio.rs  button.rs  chatlog.rs  config.rs  consts.rs  google_tts.rs  main.rs  prompt.rs  system_prompt.rs  system_prompt.txt
