[package]
name = "techakiga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cpal = "0.15.1"
crossterm = "0.26.1"
hound = "3.5.0"
reqwest = { version = "0.11.16", features = ["json", "multipart"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
xdg = "2.4.1"
